--- a/Dataframe_Operations_session1.ipynb
+++ b/Dataframe_Operations_session1.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "65d706fe-8a61-43f5-9e4c-da1a26db4275",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd  #dataframe operations"
+    "import pandas as pd  #dataframe operations ###"
    ]
   },
   {
